--- a/src/app/config/config.page.html
+++ b/src/app/config/config.page.html
@@ -7,5 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
+  <ion-item>
+  <app-explore-container name="Configuração page"></app-explore-container>
+  </ion-item>
 </ion-content>
