SCSS para Centrar Títulos

--- a/src/app/viagens/viagens.page.scss
+++ b/src/app/viagens/viagens.page.scss
@@ -6,7 +6,9 @@
     /*background: linear-gradient(to bottom, #FFFFFF, #FAFAFA);
 }*/
 
-.bgcolor {
-    background-color: #ff5733; /* Change to your desired color */
+.centered-title {
+    text-align: center;
+    color: black;
+    width: 100%;
 }
   
