--- a/src/app/config/config.page.html
+++ b/src/app/config/config.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Configuração
+    <ion-title class="centered-title">
+      <b>Configuração</b>
     </ion-title>
   </ion-toolbar>
 </ion-header>
