--- a/src/app/viagens/viagens.page.scss
+++ b/src/app/viagens/viagens.page.scss
@@ -11,4 +11,18 @@
     color: black;
     width: 100%;
 }
-  
+
+/* #FB9224;
+   #FFE382 */
+.outlineCard {
+    border: 0.25rem solid; /* Orange border */
+    border-radius: 10px; /* Optional: to round the corners */
+    border-color: #FB9224}
+
+.editButton {
+    margin-left: 0.313rem;
+    margin-right: -0.313rem;
+}
+
+.deleteButton {
+}
