--- a/src/app/travel-comments-modal/travel-comments-modal.component.html
+++ b/src/app/travel-comments-modal/travel-comments-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Comentários</ion-title>
+    <ion-title>NOTES</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="dismiss()" class="personailze-button">
         <ion-icon name="close"></ion-icon>
@@ -26,7 +26,7 @@
   </ion-list>
 
   <ion-text *ngIf="comments.length === 0" class="ion-text-center">
-    <h3>Nenhum Comentário Disponível.</h3>
+    <h3>No Notes Available.</h3>
   </ion-text>
 
     <!-- FAB to Add Comment -->
