--- a/src/global.scss
+++ b/src/global.scss
@@ -38,6 +38,7 @@
 
 :root.md {
     --ion-background-color: linear-gradient(to bottom, #FFFFFF, #FAFAFA);
+    --ion-font-family: 'Poppins', sans-serif;
 }
 
 /* Styling the tab container */
