--- a/src/app/locations/locations.page.html
+++ b/src/app/locations/locations.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title class="centered-title">
-      <b>Locais</b>
+      <b>LOCATIONS</b>
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,9 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Locais</ion-title>
+      <ion-title size="large">Locations</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Locais page"></app-explore-container>
+  <app-explore-container name="Locations page"></app-explore-container>
 </ion-content>
