--- a/src/app/profile/signup/signup.page.html
+++ b/src/app/profile/signup/signup.page.html
@@ -8,7 +8,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="flex-center">
-    <ion-card>
+    <ion-card class="no-shadow">
       <ion-card-header>
         <ion-card-title><b>Sign up</b></ion-card-title>
       </ion-card-header>
