--- a/src/app/locations/locations.page.scss
+++ b/src/app/locations/locations.page.scss
@@ -4,3 +4,9 @@
     width: 100%;
 }
   
+.disabled {
+    background-color: #ffffff;
+    color: #ffffff;
+    border-radius: 50%; /* Optional: to round the corners */
+    margin: 10px 5px 10px 20px;
+}
