--- a/src/app/profile/signup/signup.page.scss
+++ b/src/app/profile/signup/signup.page.scss
@@ -11,6 +11,14 @@
     height: 100%
 }
 
+.no-shadow {
+    box-shadow: none;
+    width: 80%;            
+    max-width: 600px;            
+    margin: 0 auto;            
+}
+  
+
 .flexed-text {
     text-align: center;
 }
