--- a/src/app/travel-comments-modal/travel-comments-modal.component.html
+++ b/src/app/travel-comments-modal/travel-comments-modal.component.html
@@ -1,8 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>NOTES</ion-title>
+    <ion-title class="titleCSS"><b>NOTES</b></ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="dismiss()" class="personailze-button">
+        <ion-icon name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons class="disabled" slot="start">
+      <ion-button [disabled]="true">
         <ion-icon name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -25,7 +30,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-text *ngIf="comments.length === 0" class="ion-text-center">
+  <ion-text *ngIf="comments.length === 0" class="flex-center">
     <h3>No Notes Available.</h3>
   </ion-text>
 
