--- a/src/app/travel-comments-modal/travel-comments-modal.component.scss
+++ b/src/app/travel-comments-modal/travel-comments-modal.component.scss
@@ -15,6 +15,10 @@ ion-item {
     color: gray;
 }
 
+.fab-custom{
+    --box-shadow: 0 !important;
+}
+
 .personailze-button ion-icon {
     font-size: 32px;
 }
@@ -32,4 +36,23 @@ ion-item {
 
 .trash-button ion-icon {
     font-size: 24px;
+}
+
+.titleCSS {
+    text-align:center;
+    color: black;
+    font-weight:bold;
+}
+
+.disabled {
+    background-color: #ffffff;
+    color: #ffffff;
+    border-radius: 50%; /* Optional: to round the corners */
+}
+
+.flex-center {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height: 70%
 }
