--- a/src/global.scss
+++ b/src/global.scss
@@ -105,3 +105,10 @@ b {
     color:#000000;
 }
 
+@media screen and (max-width: 500px) 
+{ 
+  body {
+    max-width: 100%;
+    overflow-x: hidden !important;
+  }
+}
